log
Wed 20 Mar 2024 10:58:01 PM UTC: 
 tests:  0|5
total_score: 0/70
75e2e4d
Wed 20 Mar 2024 11:26:53 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  1|4
total_score: 10/70
619f176
Wed 20 Mar 2024 11:30:32 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
aa37bcb
Wed 20 Mar 2024 11:35:00 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
5592a7e
Wed 20 Mar 2024 11:38:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
d7fd70a
Wed 20 Mar 2024 11:43:28 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:16: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
  103 |   Stack* aux = createStack();
      |                ^~~~~~~~~~~
      |                create_stack
exercises.c:103:16: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
5a8c9d6
Wed 20 Mar 2024 11:43:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
ee5e95e
Wed 20 Mar 2024 11:48:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
7cee6fe
Wed 20 Mar 2024 11:49:55 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:109:19: error: expected ‘;’ before ‘push’
  109 |     push(P1, dato)
      |                   ^
      |                   ;
  110 |     push(P2, dato);
      |     ~~~~           
Compilation failed
5caf74d
Wed 20 Mar 2024 11:50:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
953bc55
Wed 20 Mar 2024 11:56:05 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:124:4: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
  124 |    return ;
      |    ^~~~~~
exercises.c:121:5: note: declared here
  121 | int parentesisBalanceados(char *cadena) {
      |     ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ff15791
Wed 20 Mar 2024 11:56:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:124:11: error: ‘O’ undeclared (first use in this function)
  124 |    return O ;
      |           ^
exercises.c:124:11: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:125:1: error: control reaches end of non-void function [-Werror=return-type]
  125 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c4dc076
Thu 21 Mar 2024 12:14:15 AM UTC: 
 exercises.c | 27 ++++++++++++++++++++++++---
 1 file changed, 24 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:134:18: error: initialization of ‘char’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  134 |       char top = popFront(lista); //top = inicio corchete.
      |                  ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a923c28
Thu 21 Mar 2024 12:14:56 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:127:24: error: passing argument 2 of ‘pushFront’ makes pointer from integer without a cast [-Werror=int-conversion]
  127 |       pushFront(lista, c);
      |                        ^
      |                        |
      |                        char
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:17:31: note: expected ‘void *’ but argument is of type ‘char’
   17 | void pushFront(List *L, void *dato);
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:134:18: error: initialization of ‘char’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  134 |       char top = popFront(lista); //top = inicio corchete.
      |                  ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dd7f264
Thu 21 Mar 2024 12:15:23 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:134:18: error: initialization of ‘char’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  134 |       char top = popFront(lista); //top = inicio corchete.
      |                  ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a01a037
Thu 21 Mar 2024 12:16:50 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:134:18: error: initialization of ‘char’ from ‘char *’ makes integer from pointer without a cast [-Werror=int-conversion]
  134 |       char top = (char*)popFront(lista); //top = inicio corchete.
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
7c0bb2c
Thu 21 Mar 2024 12:17:01 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:135:27: error: comparison between pointer and integer [-Werror]
  135 |       if((c == ')' && top != '(') || (c == ']' && top != '[') || (c == '}' && top != '{')){
      |                           ^~
exercises.c:135:55: error: comparison between pointer and integer [-Werror]
  135 |       if((c == ')' && top != '(') || (c == ']' && top != '[') || (c == '}' && top != '{')){
      |                                                       ^~
exercises.c:135:83: error: comparison between pointer and integer [-Werror]
  135 |       if((c == ')' && top != '(') || (c == ']' && top != '[') || (c == '}' && top != '{')){
      |                                                                                   ^~
cc1: all warnings being treated as errors
Compilation failed
23da0ca
